mobile overflow fix

--- a/sources/work/work.css
+++ b/sources/work/work.css
@@ -320,6 +320,10 @@ span.lawn, span.flower{
 
 
 /* SORT LATER   ----------------------------------------------------------------------------------------------------------------- */
+#sort-later{
+    overflow: hidden;
+}
+
 #sort-later .out-container{
     width: 3440px;
 
